solve the nested layouts and truncate the pathname to keep the state

--- a/src/components/PlatformSubLeftBar/PlatformSubLeftBar.scss
+++ b/src/components/PlatformSubLeftBar/PlatformSubLeftBar.scss
@@ -1,7 +1,5 @@
 .platform-menu-container{
-    padding-top: 38px;
-    padding-left: 31px;
-    padding-right: 31px;
+    padding-top: 58px;
     width: 28%;
     height: 100%;
     border-right: 1px solid #DDD;
