--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -62,6 +62,25 @@
 
 }
 
+.platfrom-items{
+    all: unset;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    height: 32px;
+    border-radius: 5px;
+    background: transparent;
+    padding: 10px 41px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%;
+
+    &:hover{
+        cursor: pointer;
+    }
+}
+
 .item-active-platfrom{
     height: 32px;
     border-radius: 5px;
