--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -78,3 +78,17 @@ html{
     }
 
 }
+
+.default-setting-container{
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+
+    .default-setting-right{
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        background: #FFF;
+    }
+
+}
